@@ -106,14 +106,6 @@ class ApiFormatXml extends ApiFormatBase {
 					if (is_string($subElemValue) && $this->mDoubleQuote)
 						$subElemValue = $this->doubleQuote($subElemValue);
 					
-					// Replace spaces with underscores
-					$newSubElemId = str_replace(' ', '_', $subElemId);
-					if($newSubElemId != $subElemId) {
-						$elemValue[$newSubElemId] = $subElemValue;
-						unset($elemValue[$subElemId]);
-						$subElemId = $newSubElemId;
-					}
-
 					if (gettype($subElemId) === 'integer') {
 						$indElements[] = $subElemValue;
 						unset ($elemValue[$subElemId]);
